--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -6,262 +6,24 @@ $amatic_sc: "Amatic SC", cursive;
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
 
-.navlink {
-  border-bottom: $secondary-color 1px;
-}
+//APP
+@import "partials/_header";
+@import "partials/_footer";
 
-.header {
-  background-color: $primary-color;
-  width: 100%;
-  height: 10%;
-  margin-bottom: 20px;
+//HOME
+@import "partials/_slider";
+@import "partials/_home";
 
-  .header__heading {
-    width: 100%;
-    text-align: center;
-    margin: auto auto 20px auto;
-    color: $secondary-color;
-    font-family: $amatic_sc;
-    font-size: 50px;
-  }
+//PRODUCTS
+@import "partials/_products";
+@import "partials/_productCard";
 
-  .header__ul {
-    width: 100%;
-    padding: 0;
-    display: flex;
-    list-style: none;
-    justify-content: space-evenly;
-    margin: 0;
+//CONTACT
+@import "partials/_contact";
 
-    a {
-      text-decoration: none;
-      color: $secondary-color;
-      font-size: 25px;
-      font-family: $nunito;
-      // border: 1px $secondary-color solid;
-      padding: 5px;
-      // border-radius: 5px;
-    }
-  }
-}
+//ADMIN
 
-.slider__Img {
-  width: 100%;
-  height: 400px;
-}
+@import "partials/_admin";
+@import "partials/adminCard";
+@import "partials/_contactCard";
 
-.aboutParagraphSection {
-  margin: 10px auto;
-  padding: 5px;
-  color: $secondary-color;
-  display: flex;
-  flex-flow: column;
-  max-width: 50%;
-  text-align: center;
-  // box-shadow: 0 0 100px 0 rgba(59, 185, 255, 0.5);
-
-  .aboutParagraphSection__heading {
-    align-self: center;
-    margin: 10px 0;
-    font-family: $amatic_sc;
-    font-size: 40px;
-  }
-
-  .aboutParagraphSection__paragraph {
-    margin: 5px;
-  }
-}
-
-.footer {
-  width: 100%;
-  background-color: $secondary-color;
-  margin: 10px auto auto auto;
-
-  .footer__nav {
-    margin: 0;
-    display: flex;
-    width: 100%;
-
-    .nav__ul--pages {
-      // margin: 0;
-      width: 50%;
-      list-style: none;
-      display: flex;
-      flex-flow: row;
-      justify-content: space-evenly;
-      align-items: center;
-
-      a {
-        text-decoration: none;
-        color: $primary-color;
-        font-size: 20px;
-      }
-    }
-
-    .nav__ul--social {
-      // margin: 0;
-      width: 50%;
-      list-style: none;
-      display: flex;
-      flex-flow: row;
-      justify-content: space-evenly;
-      align-items: center;
-      text-align: left;
-
-      img {
-        width: 40px;
-        // margin: 20px 30px auto auto;
-      }
-    }
-  }
-}
-
-.products__Heading {
-  color: $secondary-color;
-  font-family: $amatic_sc;
-  font-size: 50px;
-  margin: 0 auto;
-}
-
-.filter {
-  .filter__label {
-    color: $secondary-color;
-    font-family: $nunito;
-    font-size: 20px;
-    margin: auto 5px auto 10px;
-  }
-
-  .filter__select {
-    width: 200px;
-    font-family: $nunito;
-    background-color: $primary-color;
-    color: $secondary-color;
-    height: 25px;
-  }
-
-  .filter__submit {
-    margin: 10px;
-    background-color: $secondary-color;
-    color: $primary-color;
-    width: 50px;
-    height: 25px;
-    border-radius: 5px;
-    font-size: 15px;
-    font-family: $nunito;
-  }
-}
-
-.productCardContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-
-  .productCard:hover{
-    transform: scale(1.1);
-  }
-
-  .productCard {
-    width: 300px;
-    height: 300px;
-    box-shadow: 10px 10px 10px lightblue;
-    margin: 15px auto;
-    transition: .3s;
-    background-color: rgba(255, 255, 255, 0.5);
-  
-    .productCard__heading {
-      color: $secondary-color;
-      font-family: $nunito;
-      margin: 0 auto;
-      font-size:20px;
-    }
-    
-    .productCard__brand {
-      color: $secondary-color;
-      font-family: $nunito;
-      margin: 0 auto;
-      font-size: 15px;
-    }
-  
-    .productCard__description {
-      font-family: $nunito;
-      margin: 0 auto;
-      font-size: 10px;
-    }
-  
-    .productCard__price {
-      font-family: $nunito;
-      margin: 0 auto;
-      font-size: 15px;
-    }
-  
-    .productCard__img {
-      width:200px;
-      height:187.875px;
-    }
-  }
-}
-
-.formContainer {
-  width: 100vw;
-  height: 72vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url('/img/backgroundImg.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-
-  .contactForm {
-    display: flex;
-    width: 20%;
-    height: 80%;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column;
-    background:rgba(255,255,255, 0.9);
-    
-    // text-align:center;
-  
-    .contactForm__heading {
-      color: $secondary-color;
-      font-family: $nunito;
-    }
-  
-    label {
-      display: block;
-      color: $secondary-color;
-      font-family: $nunito; 
-    }
-  
-    input{
-      width: 150px;
-      height:20px;
-      border: 2px $secondary-color solid;
-      border-radius: 5%;
-      color: $secondary-color;
-    }
-  
-    textarea {
-      width: 150px;
-      border: 2px $secondary-color solid;
-    }
-  
-    .submit {
-      background-color: $secondary-color;
-      color: $primary-color;
-    }
-  }
-}
-
-.adminCard {
-  border: 1px red solid;
-  margin: 5px;
-}
-
-.loginButton {
-  background-color: $secondary-color;
-  color: $primary-color;
-  font-family: $nunito;
-  font-size: 10px;
-  padding: 10px;
-}
