adding new branches

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -27,3 +27,6 @@ $amatic_sc: "Amatic SC", cursive;
 @import "partials/adminCard";
 @import "partials/_contactCard";
 
+//MEDIA QUERIES
+@import "partials/_mobile";
+@import "partials/_tablet";
