--- a/src/assets/partials/_header.scss
+++ b/src/assets/partials/_header.scss
@@ -19,6 +19,7 @@
     list-style: none;
     justify-content: space-evenly;
     margin: 0;
+    padding: 0;
 
     a {
       text-decoration: none;
