--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -20,6 +20,7 @@
   list-style: none;
   justify-content: space-evenly;
   margin: 0;
+  padding: 0;
 }
 .header .header__ul a {
   text-decoration: none;
@@ -75,6 +76,10 @@
 .slider__Img {
   width: 100%;
   height: 300px;
+}
+
+.sliderContainer {
+  text-align: center;
 }
 
 .homeAboutParagraphContainer {
@@ -315,6 +320,109 @@
 }
 .contactCard p {
   width: 133px;
+}
+
+@media (max-width: 575px) {
+  .header .header__heading {
+    font-size: 70px;
+  }
+  .header .header__ul a {
+    font-size: 30px;
+  }
+  .header .loginButton {
+    font-size: 15px;
+  }
+
+  .homeAboutParagraphContainer .homeAboutParagraphContainer__heading {
+    align-self: center;
+    margin: 0 auto;
+    font-family: "Amatic SC", cursive;
+    font-size: 60px;
+  }
+  .homeAboutParagraphContainer .homeAboutParagraphContainer__paragraph {
+    font-size: 20px;
+    margin: 5px auto;
+  }
+
+  .formContainer {
+    width: 100vw;
+  }
+  .formContainer .contactForm {
+    width: 50%;
+  }
+
+  .admin h3 {
+    margin-left: 30px;
+  }
+
+  .admin__contactHeading {
+    margin: 10px auto 10px 30px;
+  }
+
+  .adminCard {
+    width: 95%;
+    margin: 10px auto;
+    flex-wrap: wrap;
+  }
+  .adminCard p {
+    width: auto;
+    margin: auto 5px;
+  }
+
+  .editForm {
+    width: 95%;
+  }
+  .editForm input,
+.editForm label {
+    width: auto;
+    margin: auto 5px;
+  }
+
+  .contactCard {
+    width: 95%;
+    flex-wrap: wrap;
+  }
+  .contactCard p {
+    width: auto;
+    margin: auto 5px;
+  }
+}
+@media (min-width: 576px) and (max-width: 991px) {
+  .admin h3 {
+    margin-left: 30px;
+  }
+
+  .admin__contactHeading {
+    margin: 10px auto 10px 30px;
+  }
+
+  .adminCard {
+    width: 95%;
+    margin: 10px auto;
+    flex-wrap: wrap;
+  }
+  .adminCard p {
+    width: auto;
+    margin: auto 5px;
+  }
+
+  .editForm {
+    width: 95%;
+  }
+  .editForm input,
+.editForm label {
+    width: auto;
+    margin: auto 5px;
+  }
+
+  .contactCard {
+    width: 95%;
+    flex-wrap: wrap;
+  }
+  .contactCard p {
+    width: auto;
+    margin: auto 5px;
+  }
 }
 
 /*# sourceMappingURL=App.css.map */
